--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <p>THE DIGITALIAN</p>
           <p>Japonism</p>
           <p>Are You Happy?</p>
-          <p>「untitled」</p>
+          <p><a href="https://latormenta.github.io/discography-untitled/">「untitled」</a></p>
           <p>5×20 All the BEST!! 1999-2019</p>
           <p>This is 嵐</p>
         </div>
